2013-04-26  6.8.5-1 Cristy  <quetzlzacatenango@image...>
  * Recognize xc:gray50 is non-linear.
  * Loop over read() until requested bytes are consumed (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?t=23268).

2013-04-24  6.8.5-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.5-0, SVN revision 11979.

2013-04-16  6.8.5-0 Glenn Randers-Pehrson <glennrp@image...>
  * Handle benign errors as warnings in the PNG coder.

2013-04-16  6.8.5-0 Cristy  <quetzlzacatenango@image...>
  * Don't modify channel values for -separate (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23193).
  * The -adaptive-sharpen option is now sharpening properly (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23211).
  * Sometimes an image says its grayscale when its not (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23217).
  * Use malloc() to allocate X image data (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23221).
  * If there are more components than quantization tables, the last table is
    replicated.
  * Removed the ICC profile from the logo: image definition in coders/magick.c;
    it was a broken sRGB profile.
  * Negatives raised to a non-integer power returns NaN's (reference
   http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23234).

2013-04-15  6.8.4-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.4-10, SVN revision 11851.

2013-04-11  6.8.4-10 Cristy  <quetzlzacatenango@image...>
  * Ensure -define jpeg:extent is resticted to at most 7 iterations (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23179).
  * Move X11 font support from annotate.c source module to xwindow.c.

2013-04-10  6.8.4-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.4-9, SVN revision 11818.

2013-04-10  6.8.4-9 Bastien Roucaries  <roucaries.basti...>