@@ -2,6 +2,7 @@
   * Recognize xc:gray50 is non-linear.
   * Loop over read() until requested bytes are consumed (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?t=23268).
+  * Don't use gamma lookup map for HDRI.
 
 2013-04-24  6.8.5-0 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.5-0, SVN revision 11979.
